# jyn

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  deny.toml
.claude/: settings.json
.claude/hooks/: restore-skills.sh
.github/workflows/: app.yml  ci.yml  core.yml  linux-release.yml
.scratch/co-deletion-logs-gc/issues/: 01-tombstone-retention-before-gc.md
.scratch/groups/: implementation-notes.md  spec.md
.scratch/groups-follow-ups/: spec.md
.scratch/groups-follow-ups/issues/: 01-shared-sealed-context-primitive.md  02-non-member-group-ciphertext-never-gcd.md  03-post-removal-rekey-window.md  04-group-tombstone-retention-before-gc.md  05-transfer-ownership-not-atomic.md  06-group-reduction-recomputed-on-hot-paths.md  07-sleeps-under-the-sync-lock.md  08-groups-ingest-report-dead-plumbing.md  09-dart-nameof-triplication.md  10-reconciler-duplication.md  11-string-matched-p2panda-errors.md  12-keep-a-group-post-story.md  13-group-post-clawback-story.md
.scratch/groups/issues/: 01-public-groups-container-and-governance.md  02-discovery-and-hearts.md  03-members-only-encryption.md  04-pre-merge-check-and-verify.md
.scratch/linux-desktop-builds/: spec.md
.scratch/media-kit-migration/: spec.md
.scratch/phase-3-ephemerality-gc/: spec.md
.scratch/phase-3-ephemerality-gc/issues/: 01-author-side-teardown.md  02-recipient-side-teardown.md
app/: README.md  analysis_options.yaml  distribute_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/src/: actions.dart  media_limits.dart  providers.dart  time_format.dart
app/lib/src/rust/: diagnostics.dart  domain.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  groups.dart  media.dart  profile.dart  runtime.dart  runtime.freezed.dart  settings.dart  state.dart
app/lib/src/rust/api/: commands.dart  lifecycle.dart  media.dart  (+1 more)
app/lib/src/screens/: diagnostics_screen.dart  friends_screen.dart  group_admin_screen.dart  group_place_screen.dart  groups_hub_screen.dart  home_screen.dart  onboarding_screen.dart  profile_screen.dart  restore_gate.dart  settings_screen.dart  user_profile_screen.dart
app/lib/src/shot/: fixtures.dart  shot.dart
app/lib/src/theme/: chrome.dart  tokens.dart
app/lib/src/widgets/: composer.dart  jyn_avatar.dart  lifetime_indicator.dart  media_attachment.dart  media_playback.dart  post_card.dart  video_attachment.dart  voice_note_player.dart  voice_recorder.dart
app/linux/: CMakeLists.txt
app/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/linux/packaging/: app.jyn.jyn.metainfo.xml
app/linux/packaging/appimage/: make_config.yaml
app/linux/packaging/deb/: make_config.yaml
app/linux/runner/: my_application.cc
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/macos/Runner/: DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/rust_builder/: pubspec.yaml
app/rust_builder/android/: build.gradle  settings.gradle
app/rust_builder/ios/: rust_lib_jyn.podspec
app/rust_builder/linux/: CMakeLists.txt
app/rust_builder/macos/: rust_lib_jyn.podspec
app/rust_builder/windows/: CMakeLists.txt
app/test/: design_helpers_test.dart  fake_playback.dart  providers_test.dart  time_format_test.dart  video_attachment_test.dart  voice_note_player_test.dart  widget_test.dart
app/tool/: linux_smoke_test.sh  shots.sh
app/windows/: CMakeLists.txt
app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/windows/runner/: Runner.rc  main.cpp
core/: Cargo.toml
core/src/: app_config.rs  backup.rs  bridge.rs  data_schema.rs  domain.rs  frb_generated.rs  lib.rs  local_stores.rs  logging.rs  node.rs  notifications.rs  placement.rs  profile.rs  runtime.rs  settings.rs  state.rs  sync.rs  time_format.rs
core/src/api/: commands.rs  lifecycle.rs  media.rs  mod.rs  settings.rs
core/src/groups/: mod.rs  reduce.rs  service.rs
core/src/media/: blob_crypto.rs  mod.rs
core/src/spaces/: forge.rs  mod.rs  store.rs
core/tests/: backup_media.rs  circles.rs  ephemerality.rs  ephemerality_recipient.rs  friendship.rs  groups_discovery.rs  groups_members_only.rs  groups_public.rs
docs/: 2026-07-03-product-direction.md  2026-07-04-screen-design-foundations.md  2026-07-05-auto-updater.md  2026-07-05-flutter-port-spec.md  2026-07-05-post-encryption-spec.md  appcast.xml
docs/adr/: 0001-single-owner-groups-first.md  0002-group-join-and-content-modes-independent.md  0003-membership-lifecycle.md  0004-groups-as-standalone-subsystem.md  0005-join-is-owner-node-policy.md  0006-group-identity-and-metadata.md  0007-group-replication-topic.md  0008-group-discoverability.md  0009-heart-propagation-from-groups.md  0010-river-digest-doors-require-membership.md  0011-group-creation-and-inherited-mechanics.md  0012-dedicated-groups-destination.md  0013-group-place-and-admin-view.md  0014-future-direction-and-alignment-rules.md  0015-members-only-reuses-p2panda-spaces-protocol.md  0016-logs-are-expiry-keyed-co-deletion-units.md  0017-spaces-application-messages-as-evictable-leaves.md  0018-group-logs-are-expiry-bucketed-co-deletion-units.md  0018-media-kit-single-media-engine.md  0019-linux-appimage-and-deb-via-flutter-distributor.md  0020-bundle-id-migrates-to-app-jyn-jyn.md
docs/agents/: triage-labels.md
scripts/: check_bundle_id.sh  release.sh  release_tools.py  test_release_tools.py
src/: bridge.rs  data_schema.rs  diagnostics.rs  domain.rs  friend_code.rs  lib.rs  local_stores.rs  main.rs  node.rs  notifications.rs  plugin.rs  profile.rs  profile_data.rs  settings.rs  state.rs  sync.rs  time_format.rs
src/media/: mod.rs  photo.rs  playback.rs  record.rs  video.rs  waveform.rs
src/render/: card_effects.rs  mod.rs  water.wgsl  water_material.rs
src/ui/: mod.rs  theme.rs
tests/: friendship.rs
(+6 files in other folders)
