[workspace]
members = ["core"]
resolver = "2"

# Circles needs the group-scoped-auth patch to p2panda-spaces (two spaces
# per author panic the auth resolver otherwise; see the phase-2 notes in
# docs/2026-07-05-post-encryption-spec.md). The patch lives on the local
# `circles-group-scoped-auth` branch of ~/code/p2panda. Once that branch is
# pushed to github.com/cafca/p2panda, replace every `path = …` below with
#   { git = "https://github.com/cafca/p2panda.git", branch = "circles-group-scoped-auth" }
# and run `cargo update` so CI resolves it too.
[patch."https://github.com/cafca/p2panda.git"]
p2panda-blobs = { path = "/Users/pv/code/p2panda/.claude/worktrees/circles-group-scoped-auth/p2panda-blobs" }
p2panda-core = { path = "/Users/pv/code/p2panda/.claude/worktrees/circles-group-scoped-auth/p2panda-core" }
p2panda-net = { path = "/Users/pv/code/p2panda/.claude/worktrees/circles-group-scoped-auth/p2panda-net" }
p2panda-store = { path = "/Users/pv/code/p2panda/.claude/worktrees/circles-group-scoped-auth/p2panda-store" }
p2panda-stream = { path = "/Users/pv/code/p2panda/.claude/worktrees/circles-group-scoped-auth/p2panda-stream" }
p2panda-sync = { path = "/Users/pv/code/p2panda/.claude/worktrees/circles-group-scoped-auth/p2panda-sync" }
p2panda-spaces = { path = "/Users/pv/code/p2panda/.claude/worktrees/circles-group-scoped-auth/p2panda-spaces" }
p2panda-auth = { path = "/Users/pv/code/p2panda/.claude/worktrees/circles-group-scoped-auth/p2panda-auth" }
p2panda-encryption = { path = "/Users/pv/code/p2panda/.claude/worktrees/circles-group-scoped-auth/p2panda-encryption" }
