[package]
name = "jyn"
version = "0.1.0"
edition = "2021"
authors = ["p2panda contributors"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[lints.rust]
# flutter_rust_bridge's attribute macro probes this cfg during codegen.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(frb_expand)"] }

[dependencies]
# p2panda crates are tracked from the `blobs-port` branch until a
# release carrying these APIs is published to crates.io.
p2panda-blobs = { git = "https://github.com/cafca/p2panda.git", branch = "blobs-port", features = ["fs-store"] }
p2panda-core = { git = "https://github.com/cafca/p2panda.git", branch = "blobs-port" }
p2panda-net = { git = "https://github.com/cafca/p2panda.git", branch = "blobs-port", features = ["supervisor"] }
p2panda-store = { git = "https://github.com/cafca/p2panda.git", branch = "blobs-port", features = ["sqlite", "spaces"] }
p2panda-stream = { git = "https://github.com/cafca/p2panda.git", branch = "blobs-port" }
p2panda-sync = { git = "https://github.com/cafca/p2panda.git", branch = "blobs-port" }
p2panda-spaces = { git = "https://github.com/cafca/p2panda.git", branch = "blobs-port" }
p2panda-auth = { git = "https://github.com/cafca/p2panda.git", branch = "blobs-port" }
p2panda-encryption = { git = "https://github.com/cafca/p2panda.git", branch = "blobs-port", features = ["data_scheme"] }

# Async
tokio = { version = "1", features = ["full"] }
flume = "0.11"
futures-util = "0.3"
sqlx = { version = "0.8.3", default-features = false, features = ["sqlite", "runtime-tokio"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
ciborium = "0.2"
data-encoding = "2"
bytes = "1"

# Platform
directories = "5"
tempfile = "3"

# Backup (seed phrase for the identity key)
bip39 = "2"

# Media
hound = "3.5"

# Observability
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Flutter bindings
flutter_rust_bridge = "=2.12.0"

# Error handling
anyhow = "1"

iroh-blobs = "0.103"
iroh = { version = "1.0", default-features = false }

[dev-dependencies]
mock_instant = "0.6.1"
tempfile = "3"
iroh = { version = "1.0", default-features = false, features = ["test-utils"] }
p2panda-core = { git = "https://github.com/cafca/p2panda.git", branch = "blobs-port", features = ["test_utils"] }
p2panda-net = { git = "https://github.com/cafca/p2panda.git", branch = "blobs-port", features = ["test_utils"] }
p2panda-store = { git = "https://github.com/cafca/p2panda.git", branch = "blobs-port", features = ["sqlite", "test_utils"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
